Add profile image to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>José Miguel</h1>
+    <img src="" alt="Foto do perfil">
     <h2>Sumário</h2>
     <p>Estudante de tecnologia com sólida base acadêmica, <br> em busca da primeira oportunidade de estágio 
 no mercado de trabalho.<br> Almejo aplicar meus conhecimentos em desenvolvimento de sistemas e <br>
@@ -43,4 +44,5 @@ aprendizado prático no 2º módulo de Desenvolvimento de Sistemas no SENAI. </p
     </ul>
 </body>
 </html>
+
 
